--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   </nav>
   <div class="" style="	background-position: right bottom;	background-size: cover;	background-repeat: repeat;">
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.9), rgba(245, 245, 245, 0.9));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
-      <div class="row pb-0 pt-2" style="">
+      <div class="row pb-0" style="">
         <div class="col-md-12 col-lg-12">
           <h2 class="bg-dark text-center display-4 py-2 mt-2 mx-auto">About Us</h2>
           <p style="" class="my-2 bg-primary text-left lead p-2">Fine Chap Games is a newly established indie games development company comprising of two members. We've only released one game so far on the google play store but we plan on releasing several more inovative and enjoyable games in the near future. We mainly develop 2D games but we have plans to venture into 3D development eventually. Find our portfolios and CVs below if you are looking to hire.</p>
